# rust-remote-admin

./: .gitignore  BUILD_PLAN.md  CODE_QUALITY_AUDIT.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
agent/core/: Cargo.toml  build.rs
agent/core/src/: audit.rs  config.rs  lib.rs  main.rs  persistence.rs
agent/hardening/: Cargo.toml
agent/hardening/src/: capture.rs  desktop_capture.rs  injection.rs  keylog.rs  lib.rs  persistence.rs
agent/modules/: Cargo.toml
agent/modules/src/: lib.rs
c2/core/: Cargo.toml  build.rs
c2/core/src/: lib.rs  main.rs
c2/generator/: Cargo.toml
c2/generator/src/: lib.rs
c2/gui/: Cargo.toml  build.rs  tauri.conf.json
c2/gui/src/: index.html  main.rs  style.css
c2/gui/src/locales/: en.json
c2/plugins/: Cargo.toml
c2/plugins/src/: lib.rs
c2/relay/: Cargo.toml
c2/relay/src/: lib.rs  main.rs
crypto/: Cargo.toml
crypto/src/: encryption.rs  lib.rs  tls.rs
protocol/: Cargo.toml
protocol/src/: config.rs  lib.rs
