[workspace]
resolver = "2"
members = [
    "c2/core",
    "c2/gui",
    "c2/plugins",
    "c2/relay",
    "agent/core",
    "agent/modules",
    "agent/hardening",
    "protocol",
    "crypto",
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
