[workspace]
resolver = "2"
members = [
    "c2/core",
    "c2/gui",
    "c2/plugins",
    "c2/relay",
    "c2/generator",
    "agent/core",
    "agent/modules",
    "agent/hardening",
    "protocol",
    "crypto",
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pki-types = "1.10"
rcgen = "0.13"
tempfile = "3"
anyhow = "1.0"
sha2 = "0.10"
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
