[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
log = { workspace = true }
protocol = { path = "../../protocol" }
agent_modules = { path = "../modules", package = "agent-modules" }
agent_hardening = { path = "../hardening", package = "agent-hardening" }
crypto = { path = "../../crypto" }
tokio-rustls = { workspace = true }
rustls-pki-types = { workspace = true }
