[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-remote-admin-agent"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
log = { workspace = true }
env_logger = "0.11"
protocol = { path = "../../protocol" }
agent_modules = { path = "../modules", package = "agent-modules" }
agent_hardening = { path = "../hardening", package = "agent-hardening" }
crypto = { path = "../../crypto" }
tokio-rustls = { workspace = true }
rustls-pki-types = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
serde = { workspace = true }
toml = "0.8"

[dev-dependencies]
tempfile = "3"