[package]
name = "agent-hardening"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.57", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
