[package]
name = "agent-modules"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
protocol = { path = "../../protocol" }
sysinfo = "0.33"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
hex = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.57", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }
