[package]
name = "c2-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
log = { workspace = true }
protocol = { path = "../../protocol" }
crypto = { path = "../../crypto" }
tokio-rustls = { workspace = true }
rustls-pki-types = { workspace = true }
