[package]
name = "c2-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-remote-admin-c2"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
log = { workspace = true }
env_logger = "0.11"
protocol = { path = "../../protocol" }
crypto = { path = "../../crypto" }
tokio-rustls = { workspace = true }
rustls-pki-types = { workspace = true }
