[package]
name = "c2-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-remote-admin-c2"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
log = { workspace = true }
env_logger = "0.11"
protocol = { path = "../../protocol" }
crypto = { path = "../../crypto" }
c2-generator = { path = "../generator" }
tokio-rustls = { workspace = true }
rustls-pki-types = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
rcgen = { workspace = true }
sha2 = { workspace = true }
base64 = "0.22"
