[package]
name = "c2-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
protocol = { path = "../../protocol" }
c2-generator = { path = "../generator" }
log = "0.4"
anyhow = { workspace = true }

[build-dependencies]
tauri-build = "2"
