[package]
name = "c2-relay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-remote-admin-relay"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.11"
crypto = { path = "../../crypto" }
tokio-rustls = { workspace = true }
rustls-pki-types = { workspace = true }
